// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList should match snapshot with no tasks 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        role="alertdialog"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          No progress reported for this deployment
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      role="alertdialog"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        No progress reported for this deployment
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TaskList should match snapshot with tasks 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
        >
          <mock-styled.div>
            Task
          </mock-styled.div>
          <mock-styled.div>
            Status
          </mock-styled.div>
          <mock-styled.div>
            Started
          </mock-styled.div>
          <mock-styled.div>
            Finished
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
        >
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              Download Source
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-success"
              />
              Succeeded
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
        >
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              Install
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-success"
              />
              Succeeded
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
        >
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              Build
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-success"
              />
              Succeeded
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
        >
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              Deploy
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-success"
              />
              Succeeded
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div>
              -
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <div
        class="el-mt6"
      >
        <mock-styled.button
          classname="el-intent-primary"
          disabled="true"
        >
          <mock-styled.div />
          Logs Unavailable
        </mock-styled.button>
      </div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
      >
        <mock-styled.div>
          Task
        </mock-styled.div>
        <mock-styled.div>
          Status
        </mock-styled.div>
        <mock-styled.div>
          Started
        </mock-styled.div>
        <mock-styled.div>
          Finished
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
      >
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            Download Source
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-success"
            />
            Succeeded
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
      >
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            Install
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-success"
            />
            Succeeded
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
      >
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            Build
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-success"
            />
            Succeeded
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
      >
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            Deploy
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-success"
            />
            Succeeded
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-table-cell-has-dark-text"
        >
          <mock-styled.div>
            -
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <div
      class="el-mt6"
    >
      <mock-styled.button
        classname="el-intent-primary"
        disabled="true"
      >
        <mock-styled.div />
        Logs Unavailable
      </mock-styled.button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
